<resources>
    <string name="app_name">ChatApp</string>

    <string name="please_enter_chat_room_name">Please enter chat room name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_fill_out_all_fields">Please fill out all fields</string>
    <string name="please_enter_valid_email_address">Please enter valid Email address</string>
    <string name="password_not_matching">Password not matching</string>
    <string name="you_do_not_have_account">You don\'t have account?</string>
</resources>